--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="<%= BASE_URL %>apple-touch-icon.png"
+      href="<%= BASE_URL %>favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="<%= BASE_URL %>favicon-32x32.png"
+      href="<%= BASE_URL %>favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="<%= BASE_URL %>favicon-16x16.png"
+      href="<%= BASE_URL %>favicon/favicon-16x16.png"
     />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
